// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionSection /> should render component when answered 1`] = `
<div
  className="sc-VigVT fdfmBm"
>
  <div
    className="sc-jTzLTM jnXhag"
  >
    <div
      className="sc-jzJRlG hbbPSk"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH bvmjNt"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          初句
        </div>
        <div
          className="sc-ifAKCX ejiZuo"
        >
          二句
        </div>
        <div
          className="sc-EHOje fUTEIU"
        >
          三句
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-fjdhpX hZnkOe"
  >
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 0.8,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-gZMcBi bKdPNs"
    onClick={[MockFunction]}
  >
    <img
      className="sc-gqjmRU kzcJUc"
      src="check_correct.png"
    />
  </div>
</div>
`;

exports[`<QuestionSection /> should render component when not answered 1`] = `
<div
  className="sc-VigVT fdfmBm"
>
  <div
    className="sc-jTzLTM jnXhag"
  >
    <div
      className="sc-jzJRlG hbbPSk"
    >
      1
       / 
      10
    </div>
    <div
      className="sc-bwzfXH bvmjNt"
      style={
        Object {
          "margin": "auto",
        }
      }
    >
      <div
        className="sc-htpNat eaelvy"
      >
        <div
          className="sc-bxivhb cIIvqJ"
        >
          初句
        </div>
        <div
          className="sc-ifAKCX ejiZuo"
        >
          二句
        </div>
        <div
          className="sc-EHOje fUTEIU"
        >
          三句
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-fjdhpX hZnkOe"
  >
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
    <div
      className="sc-bZQynM llYTgU"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <div
        className="sc-gzVnrw bvFKOA"
        color="#fff"
        onClick={[Function]}
        style={
          Object {
            "margin": "8px",
            "opacity": 1,
          }
        }
      >
        <div
          className="sc-htoDjs bKhwRD"
        >
          <div
            className="sc-dnqmqq gCITGr"
          >
            よんく
          </div>
          <div
            className="sc-iwsKbI cSrnkn"
          >
            ごく
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
